--- a/app/scss/_standard.scss
+++ b/app/scss/_standard.scss
@@ -1133,7 +1133,7 @@
 			}
 
 			input[type="text"],
-			input[type="phone"] {
+			input[type="tel"] {
 				display: block;
 				width: 100%;
 				height: 50px;
